fixed modal postion on mobile devices

--- a/src/App.css
+++ b/src/App.css
@@ -14,12 +14,29 @@
 }
 .modal_title {
   display: flex;
-  gap: 150px;
 }
 .navbar {
   box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
     rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
   margin-bottom: 50px;
+}
+@media screen and (max-width: 480px) {
+  .grid_card {
+    display: grid;
+    grid-template-columns: 1fr;
+    padding: 20px 25px;
+
+    gap: 30px;
+  }
+}
+@media (min-width: 480px) and (max-width: 960px) {
+  .grid_card {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 20px 25px;
+
+    gap: 30px;
+  }
 }
 
 .nav_heading {
